mouseoverした時に効果音を出すようにした

--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -66,3 +66,5 @@ block ContentBlock
     source(src="/sound/tudukihaweb.mp3" type="audio/mp3")
   audio#finish(preload="auto")
     source(src="/sound/finish.mp3" type="audio/mp3")
+  audio#cancel(preload="auto",volume=1.0)
+    source(src="/sound/cancel.mp3" type="audio/mp3")
